12 July 2014: Wouter
	- Fix getentropy compat code, function refs were not portable.
	- Fix to check openssl version number only for OpenSSL.
	- LibreSSL provides compat items, check for that in configure.
	- Fix bug in fix for log locks that caused deadlock in signal handler.

11 July 2014: Matthijs
	- fake-rfc2553 patch (thanks Benjamin Baier).

11 July 2014: Wouter
	- arc4random in compat/ and getentropy, explicit_bzero, chacha for
	  dependencies, from OpenBSD.  arc4_lock and sha512 in compat.
	  This makes arc4random available on all platforms, except when
	  compiled with LIBNSS (it uses libNSS crypto random).
	- fix strptime implicit declaration error on OpenBSD.
	- arc4random, getentropy and explicit_bzero compat for Windows.

4 July 2014: Wouter
	- Fix #593: segfault or crash upon rotating logfile.

3 July 2014: Wouter
	- DLV tests added.
	- signit tool fixup for compile with libldns library.
	- iana portlist updated.

27 June 2014: Wouter
	- so-reuseport is available on BSDs(such as FreeBSD 10) and OS/X.

26 June 2014: Wouter
	- unbound-control status reports if so-reuseport was successful.
	- iana portlist updated.

24 June 2014: Wouter
	- Fix caps-for-id fallback, and added fallback attempt when servers
	  drop 0x20 perturbed queries.
	- Fixup testsetup for VM tests (run testcode/run_vm.sh).

17 June 2014: Wouter
	- iana portlist updated.

3 June 2014: Wouter
	- Add AAAA for B root server to default root hints.

2 June 2014: Wouter
	- Remove unused define from iterator.h

30 May 2014: Wouter
	- Fixup sldns_enum_edns_option typedef definition.

28 May 2014: Wouter
	- Code cleanup patch from Dag-Erling Smorgrav, with compiler issue
	  fixes from FreeBSD's copy of Unbound, he notes:
	  Generate unbound-control-setup.sh at build time so it respects
	  prefix and sysconfdir from the configure script.  Also fix the
	  umask to match the comment, and the comment to match the umask.
	  Add const and static where needed.  Use unions instead of