@@ -3,6 +3,7 @@
 	- Fix to check openssl version number only for OpenSSL.
 	- LibreSSL provides compat items, check for that in configure.
 	- Fix bug in fix for log locks that caused deadlock in signal handler.
+	- update compat/getentropy to the most recent ones from OpenBSD.
 
 11 July 2014: Matthijs
 	- fake-rfc2553 patch (thanks Benjamin Baier).
